Fix javascript taking first character of message (format changed by MessageFacility)

--- a/WebGUI/html/Console.html
+++ b/WebGUI/html/Console.html
@@ -937,8 +937,8 @@
 									secondMsg[secondMsgIndex] <= '9');
 							if(secondMsgIndex != -1)
 							{
-								firstMsg = secondMsg.slice(0,secondMsgIndex+1);
-								secondMsg = secondMsg.slice(secondMsgIndex+1);
+								firstMsg = secondMsg.slice(0,secondMsgIndex);
+								secondMsg = secondMsg.slice(secondMsgIndex);
 							}
 						}
 											
