major reorganization of supervisor properties and request access. Notion of group permissions added.

--- a/WebGUI/html/MacroMaker.html
+++ b/WebGUI/html/MacroMaker.html
@@ -534,7 +534,7 @@
 		<script type="text/JavaScript" src="/WebPath/js/Globals.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/Debug.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/DesktopWindowContentCode.js"></script>
-		<script type="text/JavaScript" src="/WebPath/js/Macromaker.js"></script>
+		<script type="text/JavaScript" src="/WebPath/js/MacroMaker.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/js_lib/MultiSelectBox.js"></script>
 		<script type="text/JavaScript" src="/WebPath/js/js_lib/Sortable.js"></script>
 		  
