--- a/WebGUI/html/SlowControlsDashboardEdit.html
+++ b/WebGUI/html/SlowControlsDashboardEdit.html
@@ -351,7 +351,7 @@
 			function initEdit() {			
 				Debug.log("*****************************************init() was called");
 
-//				DesktopContent.XMLHttpRequest("Default?RequestType=getList","",handlerFunction);
+//				DesktopContent.XMLHttpRequest("Request?RequestType=getList","",handlerFunction);
 				tilesDiv = document.getElementById("tilesDiv");
 				tilesDiv.style.top = (window.innerHeight * 0.15) + "px";
 				tilesDiv.style.left = "0px";
