--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -220,7 +220,7 @@
 			function initFileTree() {			
 				Debug.log("initFileTree() was called");
 
-//				DesktopContent.XMLHttpRequest("Default?RequestType=getList","",handlerFunction);
+//				DesktopContent.XMLHttpRequest("Request?RequestType=getList","",handlerFunction);
 
 
 				window.onresize = redrawWindow;
