--- a/WebGUI/html/TEMPLATE.html
+++ b/WebGUI/html/TEMPLATE.html
@@ -69,7 +69,7 @@
 				block3El = document.getElementById('block3');//blue
 				block4El = document.getElementById('block4');//green
 				
-				DesktopContent.XMLHttpRequest("MacroMaker?RequestType=Sijia","",handlerFunction);
+				DesktopContent.XMLHttpRequest("Request?RequestType=Sijia","",handlerFunction);
 				
 
 				window.onresize = redrawWindow;
