--- a/WebGUI/js/WebGL/RotatingPlanes/Rotating3D.html
+++ b/WebGUI/js/WebGL/RotatingPlanes/Rotating3D.html
@@ -374,7 +374,7 @@
 //	
 	function getDataFromServer () {
 
-		DesktopContent.XMLHttpRequest("request?RequestType=get3dData", "", get3dDataHandler);
+		DesktopContent.XMLHttpRequest("Request?RequestType=get3dData", "", get3dDataHandler);
 		reqServerData(_Coordinates)
 		return _Coordinates
 	}
@@ -388,7 +388,7 @@
 	
 	function getGeometryFromServer () {
 
-		DesktopContent.XMLHttpRequest("request?RequestType=getGeometry", "", getGeometryHandler);
+		DesktopContent.XMLHttpRequest("Request?RequestType=getGeometry", "", getGeometryHandler);
 	}
 
 	
