Fixed Chat and MacroMaker (and other html/js page) html requests to the default Request url.

--- a/WebGUI/html/FecDirectory.html
+++ b/WebGUI/html/FecDirectory.html
@@ -29,7 +29,7 @@
 				Debug.log("Settings getFEWs");
 				
 				//get current settings from server
-				DesktopContent.XMLHttpRequest("request?RequestType=getFecList", "", fecsRequestHandler);			
+				DesktopContent.XMLHttpRequest("Request?RequestType=getFecList", "", fecsRequestHandler);			
 			}
 
             function fecsRequestHandler(req) {         
