checkpoint for doxygen scripts and cmakes, hoping Eric can fix the otsdaq_utilities compiling of doxygen.

--- a/onlineDoc/inject_otsdaq.html
+++ b/onlineDoc/inject_otsdaq.html
@@ -26,6 +26,18 @@ Below are some helpful links to <i>otsdaq</i> C++ classes organized by topic. Th
 
 <br>
 <br>
+<i>otsdaq</i> is composed of three core repositories (otsdaq, otsdaq_utilities, and otsdaq_components) and one example user repository (otsdaq_demo).
+The intention is for users to clone otsdaq_demo into one or many of their own repositories for their own specific applications. 
+Here are the links to the source code documentation for each respository:
+<br><br>
+<div style='margin-left:40px'>
+<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq/'>otsdaq</a>
+<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/'>otsdaq_utilities</a> 
+<li><a target='_blank' href='http://otsdaq.fnal.gov/docs/code/otsdaq_components/'>otsdaq_components</a>
+</div>
+
+<br>
+<br>
 <i>otsdaq</i> is built on top of the <i>artdaq</i> toolkit and the XDAQ toolkit:
 <br><br>
 <div style='margin-left:40px'>
@@ -48,7 +60,7 @@ Below are some helpful links to <i>otsdaq</i> C++ classes organized by topic. Th
 		All client otsdaq supervisors should inherit functionality from these classes. Inheriting from CoreSupervisorBase
 		should be sufficient for most user-created supervisors for compatibility within otsdaq.
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
@@ -109,7 +121,7 @@ This class provides supervisor property get and set functionality. It has member
 	<div class='topicDescDiv'>
 The otsdaq Core Supervisors are the supervisors provided with otsdaq and otsdaq_utilities distribution.
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
@@ -166,42 +178,42 @@ ARTDAQDataManagerSupervisor
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_macro_maker_supervisor.html'>
 ChatSupervisor
 </a>
 </td><td>This class handles the otsdaq user chat functionality available in the web desktop environment.
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_macro_maker_supervisor.html'>
 ConfigurationGUISupervisor
 </a>
 </td><td>This class handles the user requests to read and write the Configuration Tree.
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_macro_maker_supervisor.html'>
 ConsoleSupervisor
 </a>
 </td><td>This class handles the presentation of Message Facility printouts to the web desktop Console
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_macro_maker_supervisor.html'>
 ControlsDashboardSupervisor
 </a>
 </td><td>This class handles the management of slow controls interface plugins, as well as the user web interface
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_macro_maker_supervisor.html'>
 LogbookSupervisor
 </a>
 </td><td>This class handles the write and read requests for web users interfacing to the web desktop Logbook
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_macro_maker_supervisor.html'>
 MacroMakerSupervisor
 </a>
 </td><td>This class handles the user interface to the web desktop MacroMaker. MacroMaker
@@ -210,7 +222,7 @@ sequence of commands on a per user basis.
 </td></tr>
 <!-- :::::::::::: -->
 <tr><td>
-<a href=''>
+<a href='http://otsdaq.fnal.gov/docs/code/otsdaq_utilities/classots_1_1_visual_supervisor.html'>
 VisualSupervisor
 </a>
 </td><td>This class handles the web user interface to a VisualDataManager with reqgard to the web desktop Visualizer.
@@ -228,7 +240,7 @@ The Visualizer can display ROOT object in real-time, as well as 2D and 3D displa
 	<div class='topicDescDiv'>
 	The classes in this section are involved in user account management and system security.
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
@@ -276,7 +288,7 @@ The classes in this section are involved with the control and management of fron
 are considered to be the specifics for how to interface to a device external to otsdaq. For example, a front-end interface might be
 a physics detector or a detector emulator.
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
@@ -319,7 +331,7 @@ Macro Maker compatibility.
 	<div class='topicDescDiv'>
 These classes are associated with the handling of data being received by the otsdaq system. 
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
@@ -393,7 +405,7 @@ extracts and process streaming data from a Buffer.
 	<div class='topicDescDiv'>
 	The classes in this section are involved with the visualization of incoming data.
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
@@ -419,7 +431,7 @@ extracts and process streaming data from a Buffer.
 	<div class='topicDescDiv'>
 	The classes in this section are involved with otsdaq layer on top of the artdaq toolkit.
 	</div>
-	<table border='1px'>
+	<table>
 	<tr><th class='topicClassNameCol'>
 		Class Name and Link
 	</th><th>
