--- a/onlineDoc/inject_otsdaq_head.html
+++ b/onlineDoc/inject_otsdaq_head.html
@@ -8,16 +8,40 @@
 <style type="text/css">		
 	.contents 
 	{
-		color: #a93737;
+		color: #463838;
+		font-size: 14px !important;
 	}
 
+	.contents a,.contents a:visited 
+	{
+		color: #153788 !important;
+	}
+	.contents a:hover 
+	{
+		text-decoration: underline;
+	}
+
+	.contents div, .contents table 
+	{
+		font-size: 14px !important;
+	}
+	
 	.contents table
 	{
-		border: 1px solid #153788;
+		border: 1px solid #ddd;		
 	}
 	.contents table td
 	{
 		padding: 20px
+	}
+	.contents table tr:nth-child(even) 
+	{
+		background-color: #eee;
+	}
+	.contents table th 
+	{
+		background-color: #333;
+		color: white;
 	}
 	
 	.topicClassNameCol
