improved color scheme handling for bold in popup Debug dialog

--- a/WebGUI/html/Wizard.html
+++ b/WebGUI/html/Wizard.html
@@ -53,15 +53,15 @@
 
 
 			        if (notSecure) { 
-    		                      var msg = "<b>This Wizard is not as secure as it could be!</b>\n" +
+    		                      var msg = "<b>Note: Your Wiz-mode is not as secure as it could be!</b>\n" +
     			                        "\nWe see that you are using the default security sequence for accessing your otsdaq Wiz mode." +
-										"\n\nIn Wiz mode, many sensitive paramters for your DAQ system can be changed, so you may want it to be more secure. " +
+										"\n\nIn Wiz-mode, many sensitive paramters for your DAQ system can be changed, so you may want it to be more secure. " +
 			                        "This page is secured by an authentication sequence to help avoid unauthorized access. " + 
 			                        "The sequence is only displayed at the Linux console and is never transmitted by your otsdaq server for security." +
 			                        "\n\n If you would like to make your Wiz mode more secure, you can click " +
                                                 "<a href='#' onclick='DesktopContent.setSecurityOn(true)'>here</a>" +
 			                        " to enable a longer, randomly generated sequence generated at each runtime or you can set up this feature any time by " +
-			                        "visiting the 'Edit Security' app on the Wiz mode desktop."; 
+			                        "visiting the 'Edit Security' app on the Wiz-mode desktop."; 
 			             //Debug.log(msg, Debug.INFO_PRIORITY);
                    	             DesktopContent.tooltip("Security Alert",msg);
 			        }
@@ -72,7 +72,7 @@
 						"revive your system. If you are here, you are considered an otsdaq system " +
 						"administrator.\n\n" +
 						"The Wiz-mode desktop environment behaves the same as in normal mode, but there are a few " +
-						"special apps available in Wiz-mode:" +
+						"special apps available in Wiz-mode:\n" +
 						
 						"\n\t- <b>Edit Security:</b> " +
 						"<INDENT>" +
